--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,39 @@
+/*div {
+border: 1px;
+border-style: solid;
+border-color: red;
+}
+li {
+border: 1px;
+border-style: solid;
+border-color: red;
+}
+ul {
+border: 1px;
+border-style: solid;
+border-color: red;
+}
+h1 {
+border: 1px;
+border-style: solid;
+border-color: red;
+}
+h2 {
+border: 1px;
+border-style: solid;
+border-color: red;
+}
+p {
+border: 1px;
+border-style: solid;
+border-color: red;
+}
+section {
+border: 1px;
+border-style: solid;
+border-color: red;
+}*/
+
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -9,23 +45,429 @@
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
+/*Логотип*/
+.logo {
+  position: absolute;
+  z-index: 2;
+  top: 30px;
+  left: 64px;
+
+  width: 183px;
+}
+
+.logo_place_header {
+  background-image: url("../images/logo_place_header.svg");
+  height: 32px;
+}
+
+.logo_place_footer {
+  background-image: url("../images/logo_place_footer.svg");
+  position: static;
+  height: 35px;
+}
+
+
+/*Всё, что относится к header*/
 .header {
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+
+  display: flex;
+  position: relative;
+  flex-wrap: wrap;
+
   /* выше установили ограничения для секции */
+  background-color: #f2f2f2;
 }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
+.header__title {
+  margin: 0;
+
+  position: relative;
+  left: 64px;
+
+  font-size: 102px;
+  line-height: 96px;
+  font-weight: bold;
+  align-self: center;
+
+  width: 730px;
+}
+
+.header__subtitle {
+  margin: 0;
+
+  position: absolute;
+  z-index: 2;
+  bottom: 30px;
+  left: 64px;
+
+  width: 388px;
+
+  font-size: 18px;
+  line-height: 25px;
+  font-weight: normal;
+}
+
+.header__subtitle_link {
+  text-decoration: none;
+  color:#2f80ed;
+}
+
+.header__subtitle_link:hover {
+  color: #1f1f1f;
+}
+
+
+.header__main-illustration {
+  /*background-image: url(../images/header-image.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  */
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 1;
+
+  width: 765px;
+  height: 608px;
+}
+
 .header__square-pic {
-  height: 568px;
+  position: absolute;
+  right: 0;
+  top: 64px;
+
+  background:  #2f80ed ;
   width: 568px;
+  height: 568px;
 }
 
-/* и элемента с модификатором вида ключ-значение */
-.table__cell_theme_dark {
-  width: 200px;
+/*Вторая секция description*/
+.description {
+  display: flex;
+  justify-content: center;
+  padding-top: 100px;
+}
+
+.two-columns {
+  display: flex;
+  box-sizing: border-box;
+  justify-content: space-between;
+
+  width: 80%;
+}
+
+.two-columns__brief {
+  width: 175px;
+}
+
+.two-columns__brief_title {
+  margin: 0;
+
+  color: #2f80ed;
+  font-size: 18px;
+  line-height: 1.2;
+  font-weight: normal;
+
+}
+
+.two-columns__main-text {
+  margin: 0;
+
+  width: 80%;
+  min-width: 784px;
+}
+
+.two-columns__paragraph {
+  margin: 0;
+
+  font-size: 24px;
+  line-height: 34PX;
+  font-weight: normal;
+  margin-bottom: 30px;
+}
+
+.two-columns__paragraph:last-child {
+  margin-bottom: 0;
+}
+
+.two-columns__paragraph:first-child {
+  margin-top: 0;
+}
+
+.two-columns__paragraph_span-accent {
+  font-weight: bold;
+}
+
+/*Третья секция digits*/
+.digits {
+  margin: 0;
+
+  padding-top: 100px;
+  padding-bottom: 100px;
+
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.table__text_them_dark {
   color: white;
-  margin-right: 0;
+}
+
+.section__table {
+  padding: 0;
+  margin: 0;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
+
+  width: 1100px;
+  z-index: 1;
+}
+
+.table__cell {
+  margin-top: 60px;
+
+  list-style: none;
+  min-width: 250px;
+  max-width: 250px;
+
+  overflow: hidden;
+}
+
+.table__cell_theme_dark {
   margin-top: 80px;
+  min-width: 200px;
+  max-width: 200px;
+  margin-right: 0;
+}
+
+.section__title {
+  margin: 0;
+
+  font-size: 60px;
+  line-height: 69px;
+  font-weight: bold;
+
+  width: 60%;
+  text-align: center;
+}
+
+.section__subtitle {
+  margin: 0;
+  margin-top: 20px;
+
+  font-size: 24px;
+  line-height: 34px;
+  font-weight: normal;
+
+  width: 60%;
+  text-align: center;
+}
+
+.table__cell_heading {
+  margin: 0;
+  font-size: 24px;
+  line-height: 1.15;
+  font-weight: bold;
+}
+
+.table__cell_text {
+  margin: 0;
+
+  font-size: 18px;
+  line-height: 1.2;
+  font-weight: normal;
+
+  padding-top: 20px;
+}
+
+.table__cell_text_source {
+  margin: 0;
+
+  font-size: 18px;
+  line-height: 1.2;
+  font-weight: normal;
+  padding-top: 20px;
+}
+
+/*Четвертая секция Feinman*/
+.feinman {
+  margin: 0;
+
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  align-items: center;
+  height: 790px;
+  background-color: #f2f2f2;
+
+  padding-top: 100px;
+}
+
+.feinman__title {
+  margin: 0;
+
+  width: 648px;
+
+  text-align: center;
+  font-size: 120px;
+  line-height: 1.15;
+  font-weight: bold;
+  z-index: 1;
+}
+
+.feinman__subtitle {
+  margin: 0;
+
+  margin-top: 70px;
+  font-size: 36px;
+  line-height: 51px;
+  font-weight: normal;
+  z-index: 1;
+}
+
+.feinman__image{
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 867px;
+  height: 637px;
+}
+
+.feinman__link{
+  position: absolute;
+  top: 50%;
+  right: 48px;
+}
+
+.feinman__link_items {
+  margin: 0;
+
+  color: black;
+  text-decoration: none;
+  font-size: 36px;
+  line-height: 51px;
+  font-weight: normal;
+}
+
+.feinman__link_items:hover {
+  color: #2f80ed;
+}
+
+/*Пятая секция Kaufman*/
+.kaufman {
+  margin: 0;
+
+  padding-top: 90px;
+  padding-bottom: 90px;
+
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  position: relative;
+  justify-content: space-between;
+  overflow: hidden;
+  background-color: #1f1f1f;
+}
+
+.kaufman__image {
+  position: absolute;
+  top: 0;
+  right: -210px;
+  margin: 0;
+
+  width: 877px;
+  height: 877px;
+
+  background-image: url("../images/kaufman-triangle.svg");
+  background-size: 100%;
+}
+
+/*Подвал*/
+.footer {
+  display: flex;
+  flex-direction: row;
+  min-height: 350px;
+  justify-content: space-around;
+  background-color: #1f1f1f;
+}
+
+.footer__columns {
+  display: flex;
+  flex-direction: row;
+  margin-top: 60px;
+  margin-bottom: 40px;
+  width: 90%;
+  justify-content: space-between;
+}
+
+.footer__columns_content_copyright {
+  display: flex;
+  flex-basis: 711px;
+  flex-direction: column;
+  justify-content: space-between;
+
+}
+
+.footer__columns_content_info {
+display: flex;
+flex-direction: column;
+
+}
+
+.footer__columns_content_social {
+display: flex;
+flex-direction: column;
+
+}
+
+.footer__author {
+  font-size: 18px;
+  line-height: 25px;
+  font-weight: normal;
+  margin: 18px 0;
+}
+
+.footer__columns_heading {
+  margin: 0;
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.footer__columns_links {
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-bottom: 16px;
+
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: normal;
+}
+
+.footer__columns_icon {
+  margin: 0;
+  padding: 0;
+  width: 16px;
+  height: 16px;
+  margin-right: 10px;
+}
+
+.footer__columns_links_main, .footer__columns_links_concept, .footer__columns_links_mentors {
+  text-decoration: none;
+}
+
+.footer__columns_links_facebook, .footer__columns_links_vk, .footer__columns_links_instagram {
+  text-decoration: none;
 }
