--- a/blocks/khan/__buy-link/khan__buy-link.css
+++ b/blocks/khan/__buy-link/khan__buy-link.css
@@ -1,6 +1,8 @@
 .khan__buy-link {
   margin: 0;
 
+  align-self: flex-start;
+
   text-decoration: none;
   color:#2f80ed;
   transition: opacity 0.3s, color 0.3s ease-in-out;
