--- a/blocks/khan/__buy-link/khan__buy-link.css
+++ b/blocks/khan/__buy-link/khan__buy-link.css
@@ -3,6 +3,10 @@
 
   align-self: flex-start;
 
+  font-size: 30px;
+  line-height: 42px;
+  font-weight: normal;
+
   text-decoration: none;
   color:#2f80ed;
   transition: opacity 0.3s, color 0.3s ease-in-out;
